fix: revision card with overlay screen alignment and also sizes

--- a/src/addons/overlay/_screen.less
+++ b/src/addons/overlay/_screen.less
@@ -22,4 +22,7 @@
     opacity: 0 !important;
     .trans-anim-none() !important;
   }
+  .card-overlay > .card-inner {
+    align-items: center;
+  }
 }
